<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormsActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forms"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newFormBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/newFormBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/newQuestionnaire"
        app:layout_constraintBottom_toTopOf="@+id/listFormsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/listFormsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listQuestionnaires"
        app:layout_constraintBottom_toTopOf="@+id/statisticBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newFormBtn" />

    <Button
        android:id="@+id/statisticBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic"
        app:layout_constraintBottom_toTopOf="@+id/totalFormsCountTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listFormsBtn" />

    <TextView
        android:id="@+id/totalFormsCountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalCountQuestionnaires"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>